Strip out run-java code only relevant to old JVM versions